# cuda_optimizer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/reduce/: CMakeLists.txt  reduce_v0.cu  reduce_v0_1024.cu  reduce_v0_512.cu  reduce_v1.cu  reduce_v1_1024.cu  reduce_v1_256.cu  reduce_v1_512.cu  reduce_v2_1024.cu  reduce_v2_256.cu  reduce_v2_512.cu  reduce_v3_1024.cu  reduce_v3_256.cu  reduce_v3_512.cu  reduce_v4_1024.cu  reduce_v4_256.cu  reduce_v4_512.cu  reduce_v5_1024.cu  reduce_v5_256.cu  reduce_v5_512.cu  reduce_v6_256.cu  reduce_v7_256.cu
src/transpose/: CMakeLists.txt  copy_v0_32x16.cu  copy_v0_32x32.cu  copy_v0_32x8.cu
